--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
   "dependencies": {
     "@phosphor-icons/react": "^2.1.7",
     "@reduxjs/toolkit": "^2.2.8",
-    "antd": "^5.21.6",
+    "antd": "^5.22.3",
     "axios": "^1.7.7",
     "razorpay": "^2.9.4",
     "react": "^18.3.1",
@@ -22,6 +22,8 @@
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.26.2",
     "react-slick": "^0.30.2",
+    "recoil": "^0.7.7",
+    "recoil-persist": "^5.1.0",
     "redux-persist": "^6.0.0",
     "slick-carousel": "^1.8.1",
     "tailwind-scrollbar-hide": "^1.1.7"
