--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@reduxjs/toolkit": "^2.2.8",
     "antd": "^5.22.3",
     "axios": "^1.7.7",
+    "jquery": "^3.7.1",
     "razorpay": "^2.9.4",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
